--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       width: 100%;
       height: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       border-radius: 10px;
@@ -87,6 +88,14 @@
     .controls {
       margin-bottom: 20px;
     }
+
+    .counter {
+      font-size: 12px;
+      color: #666;
+      position: absolute;
+      bottom: 8px;
+      left: 12px;
+    }
   </style>
 </head>
 <body>
@@ -98,8 +107,13 @@
 
   <div class="card" id="card">
     <div class="inner">
-      <div class="front" id="front">Загрузка...</div>
-      <div class="back" id="back"></div>
+      <div class="front" id="front">
+        Загрузка...
+        <div class="counter" id="counter-front"></div>
+      </div>
+      <div class="back" id="back">
+        <div class="counter" id="counter-back"></div>
+      </div>
     </div>
   </div>
 
