--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <div class="inner">
       <div class="front" id="front">
         Загрузка...
+        <span id="text-front">Загрузка...</span>
         <div class="counter" id="counter-front"></div>
       </div>
       <div class="back" id="back">
