--- a/index.html
+++ b/index.html
@@ -105,18 +105,19 @@
     <button id="btn-ru-es">русский → español</button>
   </div>
 
-  <div class="card" id="card">
-    <div class="inner">
-      <div class="front" id="front">
-        Загрузка...
-        <span id="text-front">Загрузка...</span>
-        <div class="counter" id="counter-front"></div>
-      </div>
-      <div class="back" id="back">
-        <div class="counter" id="counter-back"></div>
-      </div>
+<div class="card" id="card">
+  <div class="inner">
+    <div class="front" id="front">
+      <span id="text-front">Загрузка...</span>
+      <div class="counter" id="counter-front"></div>
+    </div>
+    <div class="back" id="back">
+      <span id="text-back"></span>
+      <div class="counter" id="counter-back"></div>
     </div>
   </div>
+</div>
+
 
   <script src="controller.js"></script>
 </body>
