--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
       bottom: 8px;
       left: 12px;
     }
+  .side-buttons {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.side-buttons button {
+  padding: 8px 12px;
+  font-size: 14px;
+  background-color: #eee;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.side-buttons button:hover {
+  background-color: #ccc;
+}
+
+  
   </style>
 </head>
 <body>
@@ -104,6 +128,11 @@
     <button id="btn-es-ru">español → русский</button>
     <button id="btn-ru-es">русский → español</button>
   </div>
+
+<div class="side-buttons">
+  <button id="btn-hide">Скрыть карточку</button>
+  <button id="btn-reset">Обновить</button>
+</div>
 
 <div class="card" id="card">
   <div class="inner">
