--- a/index.html
+++ b/index.html
@@ -3,151 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Карточки слов</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      background: #f0f0f0;
-    }
-
-    button {
-      margin: 0 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      background-color: #ddd;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #bbb;
-    }
-
-    button.active {
-      background-color: #4caf50;
-      color: white;
-      font-weight: bold;
-    }
-
-    .card {
-      width: 300px;
-      height: 200px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      text-align: center;
-      cursor: pointer;
-      transition: transform 0.6s;
-      position: relative;
-      perspective: 1000px;
-    }
-
-    .inner {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-    }
-
-    .flipped .inner {
-      transform: rotateY(180deg);
-    }
-
-    .front, .back {
-      backface-visibility: hidden;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      border-radius: 10px;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-
-    .back {
-      transform: rotateY(180deg);
-      background-color: #e0f7fa;
-    }
-
-    .controls {
-      margin-bottom: 20px;
-    }
-
-    .counter {
-      font-size: 12px;
-      color: #666;
-      position: absolute;
-      bottom: 8px;
-      left: 12px;
-    }
-  .side-buttons {
-  position: absolute;
-  right: 20px;
-  top: 40%;
-  transform: translateY(-40%);
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.side-buttons button {
-  padding: 8px 12px;
-  font-size: 14px;
-  background-color: #eee;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.side-buttons button:hover {
-  background-color: #ccc;
-}
-
-  
-  </style>
+  <title>Карточки</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <div class="controls">
-    <button id="btn-es-ru">español → русский</button>
-    <button id="btn-ru-es">русский → español</button>
-  </div>
-
-<div class="side-buttons">
-  <button id="btn-hide">Скрыть карточку</button>
-  <button id="btn-reset">Обновить</button>
-</div>
-
-<div class="card" id="card">
-  <div class="inner">
-    <div class="front" id="front">
-      <span id="text-front">Загрузка...</span>
-      <div class="counter" id="counter-front"></div>
-    </div>
-    <div class="back" id="back">
-      <span id="text-back"></span>
-      <div class="counter" id="counter-back"></div>
+<div id="screen-cards" class="screen">
+  <h1>Карточки</h1>
+  <div class="card" id="card">
+    <div class="inner">
+      <div class="front" id="front">
+        <span id="text-front">Загрузка...</span>
+        <div class="counter" id="counter-front"></div>
+      </div>
+      <div class="back" id="back">
+        <span id="text-back"></span>
+        <div class="counter" id="counter-back"></div>
+      </div>
     </div>
   </div>
+  <div class="side-buttons">
+    <button id="btn-hide">Скрыть карточку</button>
+    <button id="btn-reset">Обновить</button>
+  </div>
+  <button id="to-library">Перейти в библиотеку</button>
 </div>
 
+<div id="screen-library" class="screen" style="display:none;">
+  <h1>Библиотека</h1>
+  <label for="file-select">Выберите набор карточек:</label>
+  <select id="file-select"></select>
+  <p>Текущий файл: <span id="current-file">–</span></p>
+  <button id="to-cards">Перейти к карточкам</button>
+</div>
 
-  <script src="controller.js"></script>
+<script src="controller.js"></script>
+<script src="library.js"></script>
 </body>
 </html>
