--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <div id="screen-cards" class="screen">
   <h1>Карточки</h1>
+  <div class="direction-buttons">
+  <button id="btn-es-ru">español → русский</button>
+  <button id="btn-ru-es">русский → español</button>
+</div>
   <div class="card" id="card">
     <div class="inner">
       <div class="front" id="front">
